Various Sonar improvements
- Converted BeanMapper to record
- Converted AnnotationClass to record
- Added Virtual Thread concurrency test.
- Improved use of generics.
- Added private constructors to utility-classes, to hide implicit public
 constructors.
- Removed redundant MappingException.java